# reth-demo

./: .gitignore  CLAUDE.md  Cargo.toml  P2P_SETUP.md  README.md  genesis.json  validator_p2p.key
cache/: solidity-files-cache.json
contracts/: PiggyBank.sol
crates/dexvm/: Cargo.toml
crates/dexvm/src/: executor.rs  lib.rs  precompiles.rs  state.rs
crates/evm/: Cargo.toml
crates/evm/src/: db.rs  executor.rs  inspector.rs  lib.rs  precompiles.rs
crates/node/: Cargo.toml
crates/node/src/: consensus.rs  evm_executor.rs  executor.rs  lib.rs  node.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: config.rs  eth_handler.rs  lib.rs  peer.rs  service.rs  session.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: lib.rs  receipt.rs  transaction.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: api.rs  evm_rpc.rs  lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: block_store.rs  lib.rs  state_store.rs  storage.rs  tables.rs
draft/: discussion_block_structure.md  discussion_p2p_library_choice.md  discussion_state_management.md  discussion_test_flows.md  p2p_block_sync_summary.md  需求.md
notes/: 00-index.md  01-architecture-overview.md  02-transaction-flow.md  03-block-production.md  04-p2p-networking.md  05-data-structures.md  06-storage-layer.md  07-cross-vm-execution.md  08-api-reference.md  eth-ds.md
scripts/: start_fullnode.sh  start_validator.sh  test_counter.sh  test_e2e.sh  test_evm.sh  test_flow1_piggybank.sh  test_flow2_precompile.sh  test_flow3_dexvm_rpc.sh  test_flow4_p2p_sync.sh  test_p2p_sync.sh
