[package]
name = "dex-dexvm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Internal
dex-primitives = { workspace = true }

# Reth
reth-execution-errors = { workspace = true }

# Primitives
alloy-primitives = { workspace = true }

# Error handling
eyre = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
