[package]
name = "dex-evm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Internal
dex-storage = { workspace = true }
dex-primitives = { workspace = true }

# Revm
revm = { workspace = true }

# Alloy
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true }
alloy-rlp = { workspace = true }

# Reth
reth-ethereum-primitives = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }

# Error handling
eyre = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Bytes
bytes = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
