[package]
name = "dex-primitives"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Reth
reth-ethereum-primitives = { workspace = true }
reth-execution-errors = { workspace = true }
reth-primitives-traits = { workspace = true }

# Primitives
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true }

# Serialization
serde = { workspace = true }
