[package]
name = "dex-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Internal
dex-dexvm = { workspace = true }
dex-primitives = { workspace = true }
dex-storage = { workspace = true }

# Web framework
axum = { workspace = true }

# JSON-RPC
jsonrpsee = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Reth
reth-ethereum-primitives = { workspace = true }

# Primitives
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true }
alloy-rlp = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
eyre = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Hex encoding
hex = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
tempfile = { workspace = true }
