[package]
name = "dex-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Reth
reth-db = { workspace = true }
reth-db-api = { workspace = true }
reth-codecs = { workspace = true }

# Primitives
alloy-primitives = { workspace = true }

# Bytes
bytes = { workspace = true }

# Serialization
serde = { workspace = true }
hex = { workspace = true }

# Error handling
eyre = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
